# finance

./: .env.example  .gitignore  README.md  application.py  finance.db  helpers.py  models.py  pyproject.toml  requirements.txt
instance/: finance.db
migrations/versions/: 3522e7c935ff_initial_tables.py
static/: styles.css
templates/: apology.html  buy.html  history.html  index.html  layout.html  profile.html  quote.html  quoted.html  sell.html
